--- a/templates/includes/sections/3-up.twig
+++ b/templates/includes/sections/3-up.twig
@@ -2,16 +2,16 @@
 	<div class="container">
 		<div class="row">
 			<div class="col col-xs-12 text-center">
-				<h2>What can you do with Cobiro?</h2>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+				<h2>{{ heading }}</h2>
+				<p>{{ text }}</p>
 			</div>
 			<div class="col col-xs-12 col-md-4">
 				<div class="card">
 					<img src="includes/img/pencil.svg" alt="pencil icon"/>
 					<div class="text-left text-center-md">
-						<h4>Create</h4>
-						<p class="small">Make campaigns and advertise for  holidays, sales and events.</p>
-						<a class="small" href="#">Learn more</a>
+						<h4>{{ title1 }}</h4>
+						<p class="small">{{ text1 }}</p>
+						<a class="small" href="{{ link1 }}">{{ linkText1 }}</a>
 					</div>
 				</div>
 			</div>
@@ -19,9 +19,9 @@
 				<div class="card">
 					<img src="includes/img/pencil.svg" alt="pencil icon"/>
 					<div class="text-left text-center-md">
-						<h4>Create</h4>
-						<p class="small">Make campaigns and advertise for  holidays, sales and events.</p>
-						<a class="small" href="#">Learn more</a>
+						<h4>{{ title2 }}</h4>
+						<p class="small">{{ text2 }}</p>
+						<a class="small" href="{{ link2 }}">{{ linkText2 }}</a>
 					</div>
 				</div>
 			</div>
@@ -29,9 +29,9 @@
 				<div class="card">
 					<img src="includes/img/pencil.svg" alt="pencil icon"/>
 					<div class="text-left text-center-md">
-						<h4>Create</h4>
-						<p class="small">Make campaigns and advertise for  holidays, sales and events.</p>
-						<a class="small" href="#">Learn more</a>
+						<h4>{{ title3 }}</h4>
+						<p class="small">{{ text3 }}</p>
+						<a class="small" href="{{ link3 }}">{{ linkText3 }}</a>
 					</div>
 				</div>
 			</div>
