--- a/templates/includes/sections/jumbo-cta.twig
+++ b/templates/includes/sections/jumbo-cta.twig
@@ -3,9 +3,9 @@
 		<div class="container">
 			<div class="row center-xs text-center">
 				<div class="col col-xs-12">
-					<h2>It’s easy to get started</h2>
-					<p>And it’s free. Two things everyone loves</p>
-					<button class="btn btn-large" aria-label="Sign up free">Sign up free</button>
+					<h2>{{ heading }}</h2>
+					{{ text }}
+						<a href="{{ link }}" class="btn btn-large">{{ linkText }}</a>
 				</div>
 			</div>
 		</div>
