--- a/templates/includes/sections/3-up-people.twig
+++ b/templates/includes/sections/3-up-people.twig
@@ -2,8 +2,8 @@
 	<div class="container">
 		<div class="row center-xs">
 			<div class="col col-xs-12 text-center">
-				<h2>Title large</h2>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+				<h2>{{ heading }}</h2>
+				{{ text }}
 			</div>
 			<div class="col col-xs-12 col-md-6 col-lg-4">
 				<div class="card people">
@@ -11,14 +11,14 @@
 						<img class="card-img-large" src="includes/img/imgplaceholder.jpg" alt="person name"/>
 						<div class="flex middle-xs between-xs space-md-up text-left">
 							<div>
-								<h4>Title small</h4>
-								<h5 >Title Xsmall</h5>
+								<h4>{{ title1 }}</h4>
+								<h5 >{{ subtitle2 }}</h5>
 							</div>
 							<img class="social-icon" src="includes/img/linkedin.svg" alt="linkedin"/>
 						</div>
 
 					</div>
-					<p class="small text-left-xs people-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce facilisis faucibus sem, sit amet vestibulum mauris vehicula quis. Fusce cursus venenatis diam et sagittis. Vestibulum eleifend massa magna, quis vestibulum augue ultrices nec. Sed euismod libero eu dui pellentesque, efficitur interdum nisi elementum. Pellentesque faucibus purus ac ullamcorper facilisis. Quisque placerat posuere nunc, id viverra dolor tincidunt a. Donec pharetra sollicitudin purus, in dapibus ex gravida eget.</p>
+					<p class="small text-left-xs people-description">{{ text1 }}</p>
 					<button class="btn hidden-md-up" onclick="peopleClickHandler(event)" aria-label="View full profile">View full profile</button>
 				</div>
 			</div>
@@ -28,14 +28,14 @@
 						<img class="card-img-large" src="includes/img/imgplaceholder.jpg" alt="person name"/>
 						<div class="flex middle-xs between-xs space-md-up text-left">
 							<div>
-								<h4>Title small</h4>
-								<h5 >Title Xsmall</h5>
+								<h4>{{ title2 }}</h4>
+								<h5 >{{ subtitle2 }}</h5>
 							</div>
 							<img class="social-icon" src="includes/img/linkedin.svg" alt="linkedin"/>
 						</div>
 
 					</div>
-					<p class="small text-left-xs people-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce facilisis faucibus sem, sit amet vestibulum mauris vehicula quis. Fusce cursus venenatis diam et sagittis. Vestibulum eleifend massa magna, quis vestibulum augue ultrices nec. Sed euismod libero eu dui pellentesque, efficitur interdum nisi elementum. Pellentesque faucibus purus ac ullamcorper facilisis. Quisque placerat posuere nunc, id viverra dolor tincidunt a. Donec pharetra sollicitudin purus, in dapibus ex gravida eget.</p>
+					<p class="small text-left-xs people-description">{{ text2 }}</p>
 					<button class="btn hidden-md-up btn-people" onclick="peopleClickHandler(event)" aria-label="View full profile">View full profile</button>
 				</div>
 			</div>
@@ -45,14 +45,14 @@
 						<img class="card-img-large" src="includes/img/imgplaceholder.jpg" alt="person name"/>
 						<div class="flex middle-xs between-xs space-md-up text-left">
 							<div>
-								<h4>Title small</h4>
-								<h5 >Title Xsmall</h5>
+								<h4>{{ title3 }}</h4>
+								<h5 >{{ subtitle3 }}</h5>
 							</div>
 							<img class="social-icon" src="includes/img/linkedin.svg" alt="linkedin"/>
 						</div>
 
 					</div>
-					<p class="small text-left-xs people-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce facilisis faucibus sem, sit amet vestibulum mauris vehicula quis. Fusce cursus venenatis diam et sagittis. Vestibulum eleifend massa magna, quis vestibulum augue ultrices nec. Sed euismod libero eu dui pellentesque, efficitur interdum nisi elementum. Pellentesque faucibus purus ac ullamcorper facilisis. Quisque placerat posuere nunc, id viverra dolor tincidunt a. Donec pharetra sollicitudin purus, in dapibus ex gravida eget.</p>
+					<p class="small text-left-xs people-description">{{ text2 }}</p>
 					<button class="btn hidden-md-up btn-people" onclick="peopleClickHandler(event)" aria-label="View full profile">View full profile</button>
 				</div>
 			</div>
