--- a/templates/includes/sections/explanation-left.twig
+++ b/templates/includes/sections/explanation-left.twig
@@ -3,15 +3,14 @@
 		<div class="row middle-xs reverse">
 			<div class="col col-sm-12 col-md-6">
 				<div class="img-responsive space-sm space-xs">
-					<img src="includes/img/lazy-man.svg" alt="Marketing Image" />
+					<img src="{{ image.url }}" alt="{{ image.title }}" />
 				</div>
 			</div>
 			<div class="col col-sm-12 col-md-6">
 				<div class="text-padding">
-					<h2 class="">No marketing skills required</h2>
-					<p>You do not need any online marketing skills to become successful with Google Ads.
-						Cobiro will handle all actions that are required.</p>
-					<a href="/">Show me how</a>
+					<h2 class="">{{ heading }}</h2>
+					{{ text }}
+					<a href="{{ link }}">{{ linkText }}</a>
 				</div>
 			</div>
 		</div>
