--- a/templates/includes/sections/featured-companies.twig
+++ b/templates/includes/sections/featured-companies.twig
@@ -3,21 +3,14 @@
 		<div class="container">
 			<div class="row center-xs middle-xs text-center">
 				<div class="col col-xs-12 space-xs-up">
-					<h2>You’ll be in good company</h2>
-					<p>Join more than 50,000 customers who manage ads better</p>
+					<h2>{{ heading }}</h2>
+					{{ text }}
 				</div>
+				{% for image in images %}
 				<div class="customer-logo col col-xs-6 col-md-3">
-					<img src="includes/img/thomas-logo.svg" alt="customer logo" />
+					<img src="{{ image.url }}" alt="{{ image.title }}" />
 				</div>
-				<div class="customer-logo col col-xs-6 col-md-3">
-					<img src="includes/img/google-logo.svg" alt="customer logo" />
-				</div>
-				<div class="customer-logo col col-xs-6 col-md-3">
-					<img src="includes/img/boozt-logo.svg" alt="customer logo" />
-				</div>
-				<div class="customer-logo col col-xs-6 col-md-3">
-					<img src="includes/img/thomas-logo.svg" alt="customer logo" />
-				</div>
+				{% endfor %}
 			</div>
 		</div>
 	</div>
