--- a/templates/includes/sections/featured-testimonal-single.twig
+++ b/templates/includes/sections/featured-testimonal-single.twig
@@ -4,11 +4,11 @@
 			<div class="col">
 				<div class="bg-lightgrey flex testimonal-box middle-md">
 					<div class="testimonial-image-wrapper">
-						<img class="testimonial-image" src="includes/img/testimonial.png" alt="image title"/>
+						<img class="testimonial-image" src="{{ image.url }}" alt="{{ image.title }}"/>
 					</div>
 					<div>
-						<h4>“My vet clinic went from almost no customers at all, to an increase in customers and revenue”</h4>
-						<p class="small">- Simon Mogensen, Small Vet Clinic</p>
+						<h4>“{{ quote }}”</h4>
+						<p class="small">- {{ person }}</p>
 					</div>
 				</div>
 			</div>
