--- a/templates/includes/sections/jumbo-header.twig
+++ b/templates/includes/sections/jumbo-header.twig
@@ -3,14 +3,16 @@
 		<div class="row middle-xs center-xs text-center-xs">
 			<div class="col col-xs-12 col-md-6 text-left-md">
 				<div class="text-padding">
-					<h1>Grow your business with Cobiro</h1>
-					<p>Fully automated advertising tool to help you create and optimise your google ads</p>
-					<button class="btn btn-large space-xs space-sm" aria-label="Sign up free">Sign up free</button>
+					<h1>{{ heading }}</h1>
+					{{ text }}
+					<a class="btn btn-large space-xs space-sm" aria-label="Sign up free" href="{{ link }}">{{ linkText }}</a>
 				</div>
 			</div>
+			{% if image %}
 			<div class="col col-xs-12 col-md-6">
-				<img class="img-responsive img-full-width" src="includes/img/jumbo-header-image.jpg" alt="Cobiro logo" />
+				<img class="img-responsive img-full-width" src="{{ image.url }}" alt="{{ image.title }}" />
 			</div>
+			{% endif %}
 		</div>
 	</div>
 </section>
