--- a/templates/index.twig
+++ b/templates/index.twig
@@ -1,27 +1,130 @@
-{% set entry = craft.entries.section( 'forside' ).one() %}
-{% set pageContent = { title : entry.title, text : entry.tekst } %}
+{% set entry = entry %}
+{% set pageContent = { title : entry.title } %}
 
 {% include 'includes/partials/header.twig' with pageContent %}
 
-{% include 'includes/sections/jumbo-header.twig' with pageContent %}
+{% for block in entry.sections.all() %}
 
-{% include 'includes/sections/featured-testimonal-single.twig' with pageContent %}
+	{% if block.type == "jumboHeader" %}
 
-{% include 'includes/sections/3-up.twig' with pageContent %}
+		{% set blockContent = {
+			heading : block.heading,
+			text : block.text,
+			link : block.href,
+			linkText : block.linkText,
+			image : block.image.first()
+		} %}
 
-{% include 'includes/sections/featured-companies.twig' with pageContent %}
+		{% include 'includes/sections/jumbo-header.twig' with blockContent %}
 
-{% include 'includes/sections/explanation-right.twig' with pageContent %}
+	{% elseif block.type == "featuredTestimonalSingle" %}
 
-{% include 'includes/sections/explanation-left.twig' with pageContent %}
+		{% set blockContent = {
+			image : block.image.first(),
+			quote : block.quote,
+			person : block.person
+		} %}
 
-{% include 'includes/sections/jumbo-cta.twig' with pageContent %}
+		{% include 'includes/sections/featured-testimonal-single.twig' with blockContent %}
 
-{% include 'includes/sections/3-up-people.twig' with pageContent %}
+	{% elseif block.type == "threeUp" %}
+
+		{% set blockContent = {
+			heading : block.heading,
+			text : block.text,
+			image1 : block.image1.first(),
+			title1 : block.title1,
+			text1 : block.text1,
+			linkText1 : block.linkText1,
+			link1 : block.link1,
+			title2 : block.title2,
+			text2 : block.text2,
+			linkText2 : block.linkText2,
+			link2 : block.link2,
+			title3 : block.title3,
+			text3 : block.text3,
+			linkText3 : block.linkText3,
+			link3 : block.link3
+		} %}
+
+		{% include 'includes/sections/3-up.twig' with blockContent %}
+
+	{% elseif block.type == "featuredCompanies" %}
+
+		{% set blockContent = {
+			heading : block.heading,
+			text : block.text,
+			images : block.images
+		} %}
+
+		{% include 'includes/sections/featured-companies.twig' with blockContent %}
+
+	{% elseif block.type == "explanationLeft" %}
+
+		{% set blockContent = {
+			heading : block.heading,
+			text : block.text,
+			link : block.href,
+			linkText : block.linkText,
+			image : block.image.first()
+		} %}
+
+		{% include 'includes/sections/explanation-left.twig' with blockContent %}
+
+	{% elseif block.type == "explanationRight" %}
+
+		{% set blockContent = {
+			heading : block.heading,
+			text : block.text,
+			link : block.href,
+			linkText : block.linkText,
+			image : block.image.first()
+		} %}
+
+		{% include 'includes/sections/explanation-right.twig' with blockContent %}
+
+	{% elseif block.type == "jumboCta" %}
+
+		{% set blockContent = {
+			heading : block.heading,
+			text : block.text,
+			link : block.href,
+			linkText : block.linkText
+		} %}
+
+		{% include 'includes/sections/jumbo-cta.twig' with blockContent %}
+
+	{% elseif block.type == "threeUpPeople" %}
+
+		{% set blockContent = {
+			heading : block.heading,
+			text : block.text,
+			image1 : block.image1.first(),
+			title1 : block.title1,
+			subtitle1 : block.subtitle1,
+			text1 : block.text1,
+			link1 : block.linkedinLink1,
+			title2 : block.title2,
+			subtitle2 : block.subtitle2,
+			text2 : block.text2,
+			link2 : block.linkedinLink2,
+			title3 : block.title3,
+			subtitle3 : block.subtitle3,
+			text3 : block.text3,
+			link3 : block.linkedinLink3
+		} %}
+
+		{% include 'includes/sections/3-up-people.twig' with blockContent %}
+
+	{% endif %}
+{% endfor %}
+
+{#
 
 {% include 'includes/sections/accordion-faq.twig' with pageContent %}
-
 {% include 'includes/sections/text-editor.twig' with pageContent %}
 {% include 'includes/sections/list-pricing.twig' with pageContent %}
+
+#}
 
 {% include 'includes/partials/footer.twig' %}
