--- a/templates/includes/sections/text-editor.twig
+++ b/templates/includes/sections/text-editor.twig
@@ -1,14 +1,8 @@
 <section class="section">
 	<div class="container">
 		<div class="row center-xs">
-			<div class="col col-xs-12 col-md-8">
-				<p class="small">
-					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce facilisis faucibus sem, sit amet vestibulum mauris vehicula quis. Fusce cursus venenatis diam et sagittis. Vestibulum eleifend massa magna, quis vestibulum augue ultrices nec. Sed euismod libero eu dui pellentesque, efficitur interdum nisi elementum. Pellentesque faucibus purus ac ullamcorper facilisis. Quisque placerat posuere nunc, id viverra dolor tincidunt a. Donec pharetra sollicitudin purus, in dapibus ex gravida eget.
-					<br/><br/>
-					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce facilisis faucibus sem, sit amet vestibulum mauris vehicula quis. Fusce cursus venenatis diam et sagittis. Vestibulum eleifend massa magna, quis vestibulum augue ultrices nec. Sed euismod libero eu dui pellentesque, efficitur interdum nisi elementum. Pellentesque faucibus purus ac ullamcorper facilisis. Quisque placerat posuere nunc, id viverra dolor tincidunt a. Donec pharetra sollicitudin purus, in dapibus ex gravida eget.
-					<br/><br/>
-					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce facilisis faucibus sem, sit amet vestibulum mauris vehicula quis. Fusce cursus venenatis diam et sagittis. Vestibulum eleifend massa magna, quis vestibulum augue ultrices nec. Sed euismod libero eu dui pellentesque, efficitur interdum nisi elementum. Pellentesque faucibus purus ac ullamcorper facilisis. Quisque placerat posuere nunc, id viverra dolor tincidunt a. Donec pharetra sollicitudin purus, in dapibus ex gravida eget.
-				</p>
+			<div class="col col-xs-12 col-md-8 text-editor-wrapper">
+					{{ text }}
 			</div>
 		</div>
 	</div>
