--- a/templates/includes/sections/list-pricing.twig
+++ b/templates/includes/sections/list-pricing.twig
@@ -3,42 +3,43 @@
 		<div class="row">
 
 			<div class="col col-xs-12 text-center">
-				<h2>Pricing</h2>
-				<p>Get the power and customization you need to manage your ads</p>
+				<h2>{{ heading }}</h2>
+				<p>{{ text }}</p>
 			</div>
 
-			<div class="col col-xs-12 col-md-4 col-md-offset-2">
+			<div class="col col-xs-12 col-sm-6 col-lg-4 col-lg-offset-2">
 				<div class="card flex center">
 					<div>
-						<h4>Cobiro Free</h4>
-						<p class="price h1">$0</p>
-						<p class="small">Make campaigns and advertise for  holidays, sales and events.</p>
-						<button class="btn btn-secondary space-xs-up" aria-label="Sign up free">Sign up free</button>
+						<h4>{{ pricings[0].titel }}</h4>
+						<p class="price h1">${{ pricings[0].price }}</p>
+						<p class="small">{{ pricings[0].text }}</p>
+						<button class="btn btn-secondary space-xs-up" aria-label="Sign up free">{{ pricings[0].linkTitle }}</button>
 						<ul class="text-left-xs price-list list-unstyled">
-							<li>Google Search</li>
-							<li>Google Shopping</li>
-							<li>Google CSS (basic)</li>
+							{% for baseFeature in baseFeatures %}
+								<li>{{ baseFeature.feature }}</li>
+							{% endfor %}
 						</ul>
 					</div>
 				</div>
 			</div>
 
-			<div class="col col-xs-12 col-md-4">
+			<div class="col col-xs-12 col-sm-6 col-lg-4">
 				<div class="card flex center">
 					<div>
-						<h4>Cobiro Free</h4>
-						<p class="price h1">$49</p>
-						<p class="small">Make campaigns and advertise for  holidays, sales and events.</p>
-						<button class="btn space-xs-up" aria-label="Sign up now">Sign up now</button>
+						<h4>{{ pricings[1].titel }}</h4>
+						<p class="price h1">${{ pricings[1].price }}</p>
+						<p class="small">{{ pricings[1].text }}</p>
+						<button class="btn space-xs-up" aria-label="Sign up now">{{ pricings[1].linkTitle }}</button>
 						<ul class="text-left-xs price-list list-unstyled">
-							<li>Google Search</li>
-							<li>Google Shopping</li>
-							<li>Google CSS (basic)</li>
+							{% for baseFeature in baseFeatures %}
+								<li>{{ baseFeature.feature }}</li>
+							{% endfor %}
 						</ul>
-							<hr class="extra-line">
+						<hr class="extra-line">
 						<ul class="text-left-xs price-list list-unstyled">
-							<li>Google Shopping</li>
-							<li>Google CSS (basic)</li>
+							{% for premiumFeature in premiumFeatures %}
+								<li>{{ premiumFeature.feature }}</li>
+							{% endfor %}
 						</ul>
 					</div>
 				</div>
