--- a/src/style/04-components/_navbar.scss
+++ b/src/style/04-components/_navbar.scss
@@ -188,3 +188,14 @@ nav {
 		}
 	}
 }
+.navbar-overlay {
+	display: none;
+}
+.submenu-expanded .navbar-overlay {
+	content: '';
+	display: block;
+	position: fixed;
+	width: 100%;
+	height: 100%;
+	z-index: 100;
+}
