--- a/templates/includes/partials/menu.twig
+++ b/templates/includes/partials/menu.twig
@@ -1,7 +1,7 @@
 
 {# Create an entry query with the 'section' and 'limit' parameters #}
 {% set mainMenu = craft.entries.section('mainMenu').level(1).all() %}
-
+<div class="navbar-overlay"></div>
 <nav class="main-menu closed" id="navbar">
 	<div class="container">
 		<div class="row between-xs middle-xs">
