ListPricing: equal heights on price caption

--- a/templates/includes/sections/list-pricing.twig
+++ b/templates/includes/sections/list-pricing.twig
@@ -1,18 +1,16 @@
-<section class="section">
+<section class="section list-pricing">
 	<div class="container">
 		<div class="row">
-
 			<div class="col col-xs-12 text-center">
 				<h2>{{ heading }}</h2>
 				<p>{{ text }}</p>
 			</div>
-
-			<div class="col col-xs-12 col-sm-6 col-lg-4 col-lg-offset-2">
+			<div class="col col-xs-12 col-md-6 col-lg-4 col-lg-offset-2">
 				<div class="card flex center">
 					<div>
 						<h4>{{ pricings[0].titel }}</h4>
 						<p class="price h1">${{ pricings[0].price }}</p>
-						<p class="small">{{ pricings[0].text }}</p>
+						<p class="small price-caption">{{ pricings[0].text }}</p>
 						<button class="btn btn-secondary space-xs-up" aria-label="Sign up free">{{ pricings[0].linkTitle }}</button>
 						<ul class="text-left-xs price-list list-unstyled">
 							{% for baseFeature in baseFeatures %}
@@ -23,12 +21,12 @@
 				</div>
 			</div>
 
-			<div class="col col-xs-12 col-sm-6 col-lg-4">
+			<div class="col col-xs-12 col-md-6 col-lg-4">
 				<div class="card flex center">
 					<div>
 						<h4>{{ pricings[1].titel }}</h4>
 						<p class="price h1">${{ pricings[1].price }}</p>
-						<p class="small">{{ pricings[1].text }}</p>
+						<p class="small price-caption">{{ pricings[1].text }}</p>
 						<button class="btn space-xs-up" aria-label="Sign up now">{{ pricings[1].linkTitle }}</button>
 						<ul class="text-left-xs price-list list-unstyled">
 							{% for baseFeature in baseFeatures %}
