--- a/src/style/05-utilities/_position.scss
+++ b/src/style/05-utilities/_position.scss
@@ -19,68 +19,67 @@
 
     // positions //
 @include loop-breakpoints {
+	.start-#{$breakpoint} {
+		-webkit-box-pack: start;
+		-ms-flex-pack: start;
+		-webkit-justify-content: flex-start;
+		-moz-justify-content: flex-start;
+		justify-content: flex-start;
+	}
 
-    .start-#{$breakpoint} {
-        -webkit-box-pack: start;
-        -ms-flex-pack: start;
-        -webkit-justify-content: flex-start;
-        -moz-justify-content: flex-start;
-        justify-content: flex-start;
-    }
+	.center-#{$breakpoint} {
+		-webkit-box-pack: center;
+		-ms-flex-pack: center;
+		-webkit-justify-content: center;
+		-moz-justify-content: center;
+		justify-content: center;
+	}
 
-    .center-#{$breakpoint} {
-        -webkit-box-pack: center;
-        -ms-flex-pack: center;
-        -webkit-justify-content: center;
-        -moz-justify-content: center;
-        justify-content: center;
-    }
+	.end-#{$breakpoint} {
+		-webkit-box-pack: end;
+		-ms-flex-pack: end;
+		-webkit-justify-content: flex-end;
+		-moz-justify-content: flex-end;
+		justify-content: flex-end;
+	}
 
-    .end-#{$breakpoint} {
-        -webkit-box-pack: end;
-        -ms-flex-pack: end;
-        -webkit-justify-content: flex-end;
-        -moz-justify-content: flex-end;
-        justify-content: flex-end;
-    }
+	.top-#{$breakpoint} {
+		-webkit-box-align: start;
+		-ms-flex-align: start;
+		-webkit-align-items: flex-start;
+		-moz-align-items: flex-start;
+		align-items: flex-start;
+	}
 
-    .top-#{$breakpoint} {
-        -webkit-box-align: start;
-        -ms-flex-align: start;
-        -webkit-align-items: flex-start;
-        -moz-align-items: flex-start;
-        align-items: flex-start;
-    }
+	.middle-#{$breakpoint} {
+		-webkit-box-align: center;
+		-ms-flex-align: center;
+		-webkit-align-items: center;
+		-moz-align-items: center;
+		align-items: center;
+	}
 
-    .middle-#{$breakpoint} {
-        -webkit-box-align: center;
-        -ms-flex-align: center;
-        -webkit-align-items: center;
-        -moz-align-items: center;
-        align-items: center;
-    }
+	.bottom-#{$breakpoint} {
+		-webkit-box-align: end;
+		-ms-flex-align: end;
+		-webkit-align-items: flex-end;
+		-moz-align-items: flex-end;
+		align-items: flex-end;
+	}
 
-    .bottom-#{$breakpoint} {
-        -webkit-box-align: end;
-        -ms-flex-align: end;
-        -webkit-align-items: flex-end;
-        -moz-align-items: flex-end;
-        align-items: flex-end;
-    }
+	.around-#{$breakpoint} {
+		-ms-flex-pack: distribute;
+		-webkit-justify-content: space-around;
+		-moz-justify-content: space-around;
+		justify-content: space-around;
+	}
 
-    .around-#{$breakpoint} {
-        -ms-flex-pack: distribute;
-        -webkit-justify-content: space-around;
-        -moz-justify-content: space-around;
-        justify-content: space-around;
-    }
-
-    .between-#{$breakpoint} {
-        -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-        -webkit-justify-content: space-between;
-        -moz-justify-content: space-between;
-        justify-content: space-between;
+	.between-#{$breakpoint} {
+		-webkit-box-pack: justify;
+		-ms-flex-pack: justify;
+		-webkit-justify-content: space-between;
+		-moz-justify-content: space-between;
+		justify-content: space-between;
 	}
 	.col-auto-#{$breakpoint} {
 		width: auto;
@@ -91,7 +90,14 @@
 	.last-#{$breakpoint} {
 		order: 1;
 	}
+	.block-#{$breakpoint} {
+		display: block;
+	}
+	.flex-#{$breakpoint} {
+		display: flex;
+	}
 }
+
 
 .flex {
 	display: flex;
