--- a/templates/includes/partials/footer.twig
+++ b/templates/includes/partials/footer.twig
@@ -45,9 +45,9 @@
 			</div>
 			<div class="footer-bottom">
 				<div class="container">
-					<div class="row space-between">
-						<div class="col col-xs-12 col-sm-6">
-							<ul class="list-inline">
+					<div class="row space-between center-xs middle-xs">
+						<div class="col col-xs-12 col-md-6 text-center-xs text-left-md space-xs space-sm">
+							<ul class="list-inline block-xs flex-md">
 								<li>
 									<a class="small text-darkgrey" href="#">Terms of Service</a>
 								</li>
@@ -56,7 +56,7 @@
 								</li>
 							</ul>
 						</div>
-						<div class="col col-xs-12 col-sm-6 text-right">
+						<div class="col col-xs-12 col-md-6 text-right text-center-xs text-center-sm text-right-md">
 							<a href="#" class="social-link">
 								<img src="includes/img/facebook.svg" alt="Facebook" />
 							</a>
