--- a/templates/includes/sections/featured-companies.twig
+++ b/templates/includes/sections/featured-companies.twig
@@ -6,6 +6,7 @@
 					<h2>{{ heading }}</h2>
 					{{ text }}
 				</div>
+				{% set images = images.all() %}
 				{% for image in images %}
 				<div class="customer-logo col col-xs-6 col-md-3">
 					<img src="{{ image.url }}" alt="{{ image.title }}" />
