--- a/src/style/00-settings/_settings.scss
+++ b/src/style/00-settings/_settings.scss
@@ -3,7 +3,7 @@ $white: #fff;
 $blue: #304FFE;
 $yellow: #FCF22B;
 $lightgrey: #F9FBFC;
-$mediumgrey: #DDDDDD;
+$mediumgrey: #E6E6E6;
 $grey: #D6D6D6;
 $darkgrey: #4F525F;
 
